--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel-notification-channels/africastalking": "^5.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+      "ext-http": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
